# Mantaray-on-IaC

./: .dockerignore  .gitattributes  .gitignore  PROJECT_STRUCTURE.md  README.md  WEBRTC_SETUP.md  WEBRTC_STEP_1.md  WEBRTC_STEP_2.md  WEBRTC_STEP_3.md  WEBRTC_STEP_4.md  WEBRTC_UPDATE_REPORT.md  ar-gapped-k3s.sh  build_and_copy_to_local_registry.sh  build_output.txt  buildimage.sh  create_remote_builder.sh  dahsbaord.sh  deploy.sh  install-webrtc-services.sh  k3s_installation_server.sh  kube_permission.sh  local_registry_push.sh  pyproject.toml  requirements.txt
.github/workflows/: docker-image.yml  main.yml
ansible/: inventory.ini  inventory_infra.ini  playbook-app.yaml  playbook-dashboard-setup.yaml  playbook-infra-airgap.yaml  playbook-infra.yaml  playbook-ip-change.yaml  playbook-network-switch.yaml  playbook.yaml
ansible/config/: robot_params.json
ansible/k8s/: dashboard-setup.yaml  dns-service.yaml  manta-ray-deployment.yaml.j2  robot-configmap.yaml.j2
ansible/k8s/cluster-services/: dashboard-source.yaml
ansible/vars/: deployment-vars.yaml  hardware-paths.yaml  infra-vars.yaml
archived-scripts/: air-gapped-k3s.sh  create_remote_builder.sh  display_init.sh  local_registry_push.sh  microros_image_build.sh
docker/: Dockerfile  pyproject.toml
docker/common/: Dockerfile  entrypoint.sh  pyproject.toml
docker/microros/: Dockerfile
docker/param_configurator/: Dockerfile
docker/webUI/: Dockerfile  Dockerfile.dockerignore
docs/: architecture.md
docs/components/: ansible-automation.md  applications.md  cd-pipeline.md  containerization.md  kubernetes.md  offline-airgap.md
docs/getting-started/: full-cluster-setup.md  prerequisites.md  quick-tryout.md  single-node-dev.md
docs/operations/: configuration-updates.md  managing-applications.md  network-switching.md  updating-images.md
docs/reference/: configuration-files.md  ros2-node-reference.md
k3s-setup/files/: k3s  k3s-airgap-images-amd64.tar.zst  k3s-airgap-images-arm64.tar.zst  k3s-arm64
kubernetes/: dashboard-token-secret.yaml  manta-ray-deployment.yaml
ros2_self_container/: gripper_serial_node_Louis.py
skills/mantaray-consultant/: SKILL.md
skills/mantaray-consultant/references/: hardware.md  ros2-packages.md  troubleshooting.md
skills/mantaray-consultant/scripts/: debug_info.sh  get_params.sh
skills/notion-hub-sync/: SKILL.md
skills/notion-hub-sync/config/: manta_hub_config.json
skills/notion-hub-sync/scripts/: notion_hub_sync.py  notion_hub_upload.py
src/Archived_for_demo/automation_pkg/: package.xml  setup.cfg  setup.py
src/Archived_for_demo/converter_pkg/: package.xml  setup.py
src/Archived_for_demo/cpp_streaming/: CMakeLists.txt  package.xml
src/Archived_for_demo/cpp_streaming/src/: opencv_node.cpp
src/http_streamer/: CMakeLists.txt  httpGetImage.cpp  httpGetImage.py  httpGetImage_cam.cpp  httpStreamer.cpp  httpStreamer.py  httpStreamer_poe.cpp  webrtc_streamer.py
src/launch_file/: launch_thruster.py
src/microRos/: main.cpp  platformio.ini
src/microRos/examples/: with_imu.cpp
src/param_configurator/: README.md  app.py  models.py  pyproject.toml  routes.py
src/webUI/: prototype.html  test_webrtc.html
src/webrtc/: README.md  signaling_server.py  webrtc_sender.py
src/webrtc_streamer/: webrtc_streamer.py
systemd/: webrtc-sender-rov-cam.service  webrtc-sender-rov.service  webrtc-signaling.service
(+133 files in other folders)
