[project]
name = "mantaray-robot-node"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "aiohttp",
    "aiortc",
    "av",
    "inputs",
    "evdev",
    "empy",
    "catkin_pkg",
    "lark",
    "opencv-python",
    "pygame",
    "textual",
    "requests",
    "pyserial",
    "simple_pid"
]