[project]
name = "mantaray-robot-node"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.13.3",
    "aiortc>=1.14.0",
    "av>=16.1.0",
    "inputs",
    "evdev",
    "empy",
    "catkin_pkg",
    "lark",
    "opencv-python",
    "pygame",
    "textual",
    "requests",
    "pyserial",
    "simple_pid",
    "pyopenssl<25.2.0"
]